# SDL2_Learning

./: CMakeLists.txt  main.c
Engine/: EngineInclude.h  SDLContext.h  SDLController.c  SDLController.h  SDLControllerRuntime.c  SDLControllerRuntime.h  SDLGame.h  egSDLContext.h  egSDLController.c  egSDLController.h  egSDLControllerRuntime.c  egSDLControllerRuntime.h  egSDLGame.h
Engine/Objects/: Color3.h  SDLContext.h  Sprite.c  Sprite.h  SpriteList.c  SpriteList.h  SpriteManager.c  SpriteManager.h  Vector2.c  Vector2.h  egColor3.h  egSprite.c  egSprite.h  egSpriteList.c  egSpriteList.h  egSpriteManager.c  egSpriteManager.h
Game/: GameBase.c  GameBase.h  GameMain.c
